@@ -37,6 +37,15 @@ target ( gantTaskdefVerifyError : 'Check that a taskdef works.' ) {
       }
     }
   }
+  /*
+   *  With Gant now using Gradle for its build instead of Ant there is no need to have the Maven Ant task
+   *  jar in the repository as a bootstrap tool and the only other use of the jar is here for this one test.
+   *  Removing this test code allows for the removal of the jar with all the knock on consequences for the
+   *  distributions.
+   *
+   *  Clearly this has decimated this test, but it is not entirely obvious what about Gant is really being
+   *  tested here anyway.
+   *
   //  Paths are relative to the directory in which this file resides.
   def artifact = 'urn:maven-artifact-ant'
   typedef ( resource : 'org/apache/maven/artifact/ant/antlib.xml' , uri : artifact ) {
@@ -48,6 +57,8 @@ target ( gantTaskdefVerifyError : 'Check that a taskdef works.' ) {
     dependency ( groupId : 'org.codehaus.groovy' , artifactId : 'groovy' , version : System.getenv ( ).GROOVY_ANT_TASK_TEST_VERSION )
   }
   taskdef ( name : 'groovyc' , classname: 'org.codehaus.groovy.ant.Groovyc' , classpathref : dependencyClasspathId )
+  *
+  */
   Gant_Test.returnValue = 'OK.'
 }
 
